fixed css issue on mobile responsive

--- a/frontend/src/components/post-item/post-item.css
+++ b/frontend/src/components/post-item/post-item.css
@@ -9,7 +9,6 @@
   border-style: solid;
   border-width: 1.5px;
   border-color: rgba(227, 235, 253, 0.8);
-  
 }
 
 .post-item-header {
@@ -93,8 +92,8 @@
   margin-left: 2%;
   margin-right: 2%;
   height: 50px;
-  border-top: 1px solid #E1E1E1;
-  border-bottom: 1px solid #E1E1E1;
+  border-top: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
 }
 
 .post-item-footer-comment-button {
@@ -117,7 +116,7 @@
 .post-item-footer-like-button {
   width: 50%;
   height: 48px;
-  position: relative; 
+  position: relative;
   float: left;
   //background-color: rgba(227, 235, 253) !important;
   background-color: white !important;
@@ -143,7 +142,7 @@
 }
 
 .show-more-footer-comment {
-  color: #0645AD;
+  color: #0645ad;
   font-weight: bold;
   cursor: pointer;
 }
@@ -152,7 +151,7 @@
   width: 90%;
   height: 50px;
   border: none;
-  border-top: 1px solid #E1E1E1;
+  border-top: 1px solid #e1e1e1;
   padding-top: 0;
 }
 
@@ -161,14 +160,20 @@
   height: 50px;
   background-color: white;
   border: none;
-  border-top: 1px solid #E1E1E1;
+  border-top: 1px solid #e1e1e1;
   word-wrap: break-word;
   color: #007bff;
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 @media only screen and (max-width: 732px) {
+  .comment-box {
+    width: 80%;
+  }
+  .comment-post {
+    width: 20%;
+  }
   .post-item-main-image {
     max-width: 732px;
   }
